# cloak

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/cloak-cli/: Cargo.toml
crates/cloak-cli/src/: main.rs
crates/cloak-core/: Cargo.toml
crates/cloak-core/src/: analysis.rs  crypto.rs  error.rs  lib.rs  traits.rs
crates/cloak-core/src/formats/: bmp.rs  jpeg.rs  lsb.rs  mod.rs  png.rs  webp.rs
crates/cloak-tui/: Cargo.toml
crates/cloak-tui/src/: app.rs  main.rs
