[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/notzenco/cloak"
homepage = "https://github.com/notzenco/cloak"
documentation = "https://docs.rs/cloak-core"

[workspace.dependencies]
cloak-core = { path = "crates/cloak-core" }

# Crypto
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"

# Image
image = "0.25"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }
rpassword = "7"
indicatif = "0.17"

# TUI
ratatui = "0.29"
crossterm = "0.28"
