[package]
name = "cloak-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Steganography toolkit - CLI"

[[bin]]
name = "cloak"
path = "src/main.rs"

[dependencies]
cloak-core = { workspace = true }
cloak-tui = { path = "../cloak-tui" }
clap = { workspace = true }
rpassword = { workspace = true }
indicatif = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
