[package]
name = "cloak-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Steganography toolkit - core library"
repository.workspace = true
keywords = ["steganography", "encryption", "security", "privacy", "stego"]
categories = ["cryptography", "command-line-utilities", "multimedia::images"]
readme = "../../README.md"

[dependencies]
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
