[package]
name = "cloak-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Steganography toolkit - TUI dashboard"
publish = false

[[bin]]
name = "cloak-tui"
path = "src/main.rs"

[dependencies]
cloak-core = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
image = { workspace = true }
